--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,9 @@ language: java
 jdk:
    - oraclejdk8
 
-script: mvn clean verify
+script: 
+   - mvn clean verify
+   - mvn clean test jacoco:report coveralls:report
+   
+after_success:
+   - mvn clean test jacoco:report coveralls:report
