--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,17 @@
         		<repoToken>8devGek2l8n13wZQpncyVI9b8TLU1bSjS</repoToken>
     		</configuration>
 		</plugin>
+		<plugin>
+    		<groupId>org.codehaus.mojo</groupId>
+    		<artifactId>cobertura-maven-plugin</artifactId>
+    		<version>2.7</version>
+    		<configuration>
+        		<format>xml</format>
+        		<maxmem>256m</maxmem>
+        		<!-- aggregated reports for multi-module projects -->
+        		<aggregate>true</aggregate>
+    		</configuration>
+		</plugin>
   	</plugins>
   </build>
 </project>
