--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,9 @@
   <groupId>manuel.bothner</groupId>
   <artifactId>SE_Java-TravisCI-Coveralls</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <build>
   	<plugins>
   		<plugin>
@@ -14,17 +17,15 @@
     		</configuration>
 		</plugin>
 		<plugin>
-    		<groupId>org.jacoco</groupId>
-    		<artifactId>jacoco-maven-plugin</artifactId>
-    		<version>0.7.5.201505241946</version>
-    		<executions>
-        		<execution>
-            		<id>prepare-agent</id>
-            		<goals>
-                		<goal>prepare-agent</goal>
-           	 		</goals>
-        		</execution>
-    		</executions>
+    		<groupId>org.codehaus.mojo</groupId>
+   			<artifactId>cobertura-maven-plugin</artifactId>
+    		<version>2.7</version>
+   			<configuration>
+        		<format>xml</format>
+       		 	<maxmem>256m</maxmem>
+        		<!-- aggregated reports for multi-module projects -->
+        		<aggregate>true</aggregate>
+    		</configuration>
 		</plugin>
   	</plugins>
   </build>
