--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ script:
    - mvn clean verify
    
 after_success:
-   - mvn clean test saga:coverage coveralls:report
+   - mvn clean test jacoco:report coveralls:report
