--- a/JaCoCo/.travis.yml
+++ b/JaCoCo/.travis.yml
@@ -6,11 +6,8 @@ language: java
 jdk:
    - oraclejdk8
 
-# container-based build:
-sudo: required
-
 script: 
    - mvn clean verify
    
 after_success:
-   - mvn clean test saga:coverage coveralls:report
+   - mvn clean test jacoco:report coveralls:report
