--- a/JaCoCo/pom.xml
+++ b/JaCoCo/pom.xml
@@ -17,25 +17,17 @@
     		</configuration>
 		</plugin>
 		<plugin>
-    		<groupId>com.github.timurstrekalov</groupId>
-    		<artifactId>saga-maven-plugin</artifactId>
-    		<version>1.5.5</version>
+    		<groupId>org.jacoco</groupId>
+    		<artifactId>jacoco-maven-plugin</artifactId>
+    		<version>0.7.5.201505241946</version>
     		<executions>
         		<execution>
+            		<id>prepare-agent</id>
             		<goals>
-                		<goal>coverage</goal>
+                		<goal>prepare-agent</goal>
             		</goals>
         		</execution>
     		</executions>
-    		<configuration>
-        		<baseDir>src/test/java</baseDir>
-        		<outputDir>${project.build.directory}/saga-coverage</outputDir>
-        		<noInstrumentPatterns>
-            		<pattern>.*/spec/.*</pattern>
-            		<pattern>.*/classpath/.*</pattern>
-            		<pattern>.*/webjars/.*</pattern>
-        		</noInstrumentPatterns>
-    	  	</configuration>
 		</plugin>
   	</plugins>
   </build>
