--- a/Cobertura&Saga/pom.xml
+++ b/Cobertura&Saga/pom.xml
@@ -17,17 +17,36 @@
     		</configuration>
 		</plugin>
 		<plugin>
-    		<groupId>org.jacoco</groupId>
-    		<artifactId>jacoco-maven-plugin</artifactId>
-    		<version>0.7.6.201602180812</version>
+    		<groupId>org.codehaus.mojo</groupId>
+   			<artifactId>cobertura-maven-plugin</artifactId>
+    		<version>2.7</version>
+   			<configuration>
+        		<format>xml</format>
+       		 	<maxmem>256m</maxmem>
+        		<!-- aggregated reports for multi-module projects -->
+        		<aggregate>true</aggregate>
+    		</configuration>
+		</plugin>
+		<plugin>
+    		<groupId>com.github.timurstrekalov</groupId>
+    		<artifactId>saga-maven-plugin</artifactId>
+    		<version>1.5.5</version>
     		<executions>
         		<execution>
-            		<id>prepare-agent</id>
             		<goals>
-                		<goal>prepare-agent</goal>
+                		<goal>coverage</goal>
             		</goals>
         		</execution>
     		</executions>
+    		<configuration>
+        		<baseDir>src/test/java</baseDir>
+        		<outputDir>${project.build.directory}/saga-coverage</outputDir>
+        		<noInstrumentPatterns>
+            		<pattern>.*/spec/.*</pattern>
+            		<pattern>.*/classpath/.*</pattern>
+            		<pattern>.*/webjars/.*</pattern>
+        		</noInstrumentPatterns>
+    	  	</configuration>
 		</plugin>
   	</plugins>
   </build>
