Cobertura test with ignored parts!

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ jdk:
 
 script: 
    - mvn clean verify
+   - mvn cobertura:cobertura coveralls:report
    
 after_success:
-   - mvn clean test jacoco:report coveralls:report
+   - mvn clean cobertura:cobertura coveralls:report
