--- a/Cobertura/pom.xml
+++ b/Cobertura/pom.xml
@@ -26,15 +26,17 @@
         		<!-- aggregated reports for multi-module projects -->
         		<aggregate>true</aggregate>
         		<!-- With the following lines you can exclude files from code coverage -->
-        		<!-- <instrumentation>
-        			<ignores>
+        		<instrumentation>
+        			<ignoreTrivial>true</ignoreTrivial>
+      				<ignoreMethodAnnotation>Main.main.CoberturaIgnore</ignoreMethodAnnotation> -->
+        			<!-- <ignores>
           				<ignore>com.example.boringcode.*</ignore>
         			</ignores>
         			<excludes>
           				<exclude>com/example/dullcode/**/*.class</exclude>
           				<exclude>com/example/**/*Test.class</exclude>
-        			</excludes>
-      			</instrumentation> -->
+        			</excludes> -->
+      			</instrumentation>
     		</configuration>
 		</plugin>
   	</plugins>
