--- a/JaCoCo/pom.xml
+++ b/JaCoCo/pom.xml
@@ -19,7 +19,12 @@
 		<plugin>
     		<groupId>org.jacoco</groupId>
     		<artifactId>jacoco-maven-plugin</artifactId>
-    		<version>0.7.5.201505241946</version>
+    		<version>0.7.6.201602180812</version>
+    		<configuration>
+        		<excludes>
+            		<exclude>**/Main.class</exclude>
+        		</excludes>
+    		</configuration>
     		<executions>
         		<execution>
             		<id>prepare-agent</id>
