--- a/pom.xml
+++ b/pom.xml
@@ -17,17 +17,25 @@
     		</configuration>
 		</plugin>
 		<plugin>
-    		<groupId>org.jacoco</groupId>
-    		<artifactId>jacoco-maven-plugin</artifactId>
-    		<version>0.7.6.201602180812</version>
-    		<executions>
-        		<execution>
-            		<id>prepare-agent</id>
-            		<goals>
-                		<goal>prepare-agent</goal>
-            		</goals>
-        		</execution>
-    		</executions>
+    		<groupId>org.codehaus.mojo</groupId>
+   			<artifactId>cobertura-maven-plugin</artifactId>
+    		<version>2.7</version>
+   			<configuration>
+        		<format>xml</format>
+       		 	<maxmem>256m</maxmem>
+        		<!-- aggregated reports for multi-module projects -->
+        		<aggregate>true</aggregate>
+        		<!-- With the following lines you can exclude files from code coverage -->
+        		<!-- <instrumentation>
+        			<ignores>
+          				<ignore>com.example.boringcode.*</ignore>
+        			</ignores>
+        			<excludes>
+          				<exclude>com/example/dullcode/**/*.class</exclude>
+          				<exclude>com/example/**/*Test.class</exclude>
+        			</excludes>
+      			</instrumentation> -->
+    		</configuration>
 		</plugin>
   	</plugins>
   </build>
