--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ jdk:
 
 script: 
    - mvn clean verify
-   - mvn cobertura:cobertura coveralls:report
    
 after_success:
-   - mvn clean cobertura:cobertura coveralls:report
+   - mvn clean test jacoco:report coveralls:report
