--- a/pom.xml
+++ b/pom.xml
@@ -17,25 +17,22 @@
     		</configuration>
 		</plugin>
 		<plugin>
-    		<groupId>org.codehaus.mojo</groupId>
-   			<artifactId>cobertura-maven-plugin</artifactId>
-    		<version>2.7</version>
-   			<configuration>
-        		<format>xml</format>
-       		 	<maxmem>256m</maxmem>
-        		<!-- aggregated reports for multi-module projects -->
-        		<aggregate>true</aggregate>
-        		<!-- With the following lines you can exclude files from code coverage -->
-        		<!-- <instrumentation>
-        			<ignores>
-          				<ignore>com.example.boringcode.*</ignore>
-        			</ignores>
-        			<excludes>
-          				<exclude>com/example/dullcode/**/*.class</exclude>
-          				<exclude>com/example/**/*Test.class</exclude>
-        			</excludes>
-      			</instrumentation> -->
+    		<groupId>org.jacoco</groupId>
+    		<artifactId>jacoco-maven-plugin</artifactId>
+    		<version>0.7.6.201602180812</version>
+    		<configuration>
+        		<excludes>
+            		<exclude>**/Main.class</exclude>
+        		</excludes>
     		</configuration>
+    		<executions>
+        		<execution>
+            		<id>prepare-agent</id>
+            		<goals>
+                		<goal>prepare-agent</goal>
+            		</goals>
+        		</execution>
+    		</executions>
 		</plugin>
   	</plugins>
   </build>
