--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     		<version>0.7.6.201602180812</version>
     		<configuration>
         		<excludes>
-            		<exclude>**/Main.class</exclude>
+            		<!-- <exclude>**/Main.class</exclude> -->
         		</excludes>
     		</configuration>
     		<executions>
